FIX: Style should be more legible.

--- a/src/App.css
+++ b/src/App.css
@@ -2,11 +2,15 @@
   text-transform: capitalize;
 }
 
+.card-group {
+  display: flex;
+  gap: 1em;
+}
+
 .contribution-wrapper {
   display: flex;
   flex-wrap: wrap;
   gap: 0.2em;
-  margin: 0.2em;
 }
 
 .contribution {
@@ -16,3 +20,14 @@
   align-items: center;
   justify-content: center;
 }
+
+.card-title {
+  height: 3em;
+}
+
+html, #root {
+  background-color: var(--bs-gray-100);
+  margin: 0;
+  padding: 0;
+}
+
